k8s/KUSTOMIZE/base/fastapi-deployment-svc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose -f docker-compose.yml convert
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: fastapi
  name: fastapi
spec:
  replicas: 3
  selector:
    matchLabels:
      io.kompose.service: fastapi
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose -f docker-compose.yml convert
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.network/apinetwork: "true"
        io.kompose.service: fastapi
    spec:
      containers:
        - image: matiasroje/optimized-fastapi
          name: fastapi
          ports:
            - containerPort: 5000
          resources: {}
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
status: {}
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose -f docker-compose.yml convert
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: fastapi
  name: fastapi
spec:
  ports:
    - name: "5000"
      port: 5000
      targetPort: 5000
  selector:
    io.kompose.service: fastapi
status:
  loadBalancer: {}
