k8s/KUSTOMIZE/base/fastapi-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fastapi-ingress
  annotations:
    kubernetes.io/ingress.class: "traefik"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  rules:
    - host: k8s.matiasroje-devops.dns-dynamic.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fastapi
                port:
                  number: 5000

  tls:
  - hosts:
      - k8s.matiasroje-devops.dns-dynamic.net
    secretName: fastapi-tls
